# devoxx-bazel

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  dependencies.yml  ij.bazelproject
cache-server/: BUILD.bazel  nginx.conf
domain/src/main/java/domain/: BUILD.bazel  BUILD.tmpl  Info.java  Model.tmpl  Model1.java  clean.sh  generate.bash
domain/src/main/java/domain/model-1/: BUILD.bazel  ModelGen0.java  ModelGen1.java  ModelGen10.java  ModelGen11.java  ModelGen12.java  ModelGen13.java  ModelGen14.java  ModelGen15.java  ModelGen16.java  ModelGen17.java  ModelGen18.java  ModelGen19.java  ModelGen2.java  ModelGen20.java  ModelGen21.java  ModelGen22.java  ModelGen23.java  ModelGen24.java  ModelGen25.java  ModelGen26.java  ModelGen27.java  ModelGen28.java  ModelGen29.java  ModelGen3.java  ModelGen30.java  ModelGen31.java  ModelGen32.java  ModelGen33.java  ModelGen34.java  ModelGen35.java  ModelGen36.java  ModelGen37.java  ModelGen38.java  ModelGen39.java  ModelGen4.java  ModelGen40.java  ModelGen41.java  ModelGen42.java  ModelGen43.java  (+11 more)
domain/src/main/java/domain/model-10/: BUILD.bazel  ModelGen450.java  ModelGen451.java  ModelGen452.java  ModelGen453.java  ModelGen454.java  ModelGen455.java  ModelGen456.java  ModelGen457.java  ModelGen458.java  ModelGen459.java  ModelGen460.java  ModelGen461.java  ModelGen462.java  ModelGen463.java  ModelGen464.java  ModelGen465.java  ModelGen466.java  ModelGen467.java  ModelGen468.java  ModelGen469.java  ModelGen470.java  ModelGen471.java  ModelGen472.java  ModelGen473.java  ModelGen474.java  ModelGen475.java  ModelGen476.java  ModelGen477.java  ModelGen478.java  ModelGen479.java  ModelGen480.java  ModelGen481.java  ModelGen482.java  ModelGen483.java  ModelGen484.java  ModelGen485.java  ModelGen486.java  ModelGen487.java  ModelGen488.java  (+11 more)
domain/src/main/java/domain/model-11/: BUILD.bazel  ModelGen500.java  ModelGen501.java  ModelGen502.java  ModelGen503.java  ModelGen504.java  ModelGen505.java  ModelGen506.java  ModelGen507.java  ModelGen508.java  ModelGen509.java  ModelGen510.java  ModelGen511.java  ModelGen512.java  ModelGen513.java  ModelGen514.java  ModelGen515.java  ModelGen516.java  ModelGen517.java  ModelGen518.java  ModelGen519.java  ModelGen520.java  ModelGen521.java  ModelGen522.java  ModelGen523.java  ModelGen524.java  ModelGen525.java  ModelGen526.java  ModelGen527.java  ModelGen528.java  ModelGen529.java  ModelGen530.java  ModelGen531.java  ModelGen532.java  ModelGen533.java  ModelGen534.java  ModelGen535.java  ModelGen536.java  ModelGen537.java  ModelGen538.java  (+11 more)
domain/src/main/java/domain/model-12/: BUILD.bazel  ModelGen550.java  ModelGen551.java  ModelGen552.java  ModelGen553.java  ModelGen554.java  ModelGen555.java  ModelGen556.java  ModelGen557.java  ModelGen558.java  ModelGen559.java  ModelGen560.java  ModelGen561.java  ModelGen562.java  ModelGen563.java  ModelGen564.java  ModelGen565.java  ModelGen566.java  ModelGen567.java  ModelGen568.java  ModelGen569.java  ModelGen570.java  ModelGen571.java  ModelGen572.java  ModelGen573.java  ModelGen574.java  ModelGen575.java  ModelGen576.java  ModelGen577.java  ModelGen578.java  ModelGen579.java  ModelGen580.java  ModelGen581.java  ModelGen582.java  ModelGen583.java  ModelGen584.java  ModelGen585.java  ModelGen586.java  ModelGen587.java  ModelGen588.java  (+11 more)
domain/src/main/java/domain/model-13/: BUILD.bazel  ModelGen600.java
domain/src/main/java/domain/model-2/: BUILD.bazel  ModelGen50.java  ModelGen51.java  ModelGen52.java  ModelGen53.java  ModelGen54.java  ModelGen55.java  ModelGen56.java  ModelGen57.java  ModelGen58.java  ModelGen59.java  ModelGen60.java  ModelGen61.java  ModelGen62.java  ModelGen63.java  ModelGen64.java  ModelGen65.java  ModelGen66.java  ModelGen67.java  ModelGen68.java  ModelGen69.java  ModelGen70.java  ModelGen71.java  ModelGen72.java  ModelGen73.java  ModelGen74.java  ModelGen75.java  ModelGen76.java  ModelGen77.java  ModelGen78.java  ModelGen79.java  ModelGen80.java  ModelGen81.java  ModelGen82.java  ModelGen83.java  ModelGen84.java  ModelGen85.java  ModelGen86.java  ModelGen87.java  ModelGen88.java  (+11 more)
domain/src/main/java/domain/model-3/: BUILD.bazel  ModelGen100.java  ModelGen101.java  ModelGen102.java  ModelGen103.java  ModelGen104.java  ModelGen105.java  ModelGen106.java  ModelGen107.java  ModelGen108.java  ModelGen109.java  ModelGen110.java  ModelGen111.java  ModelGen112.java  ModelGen113.java  ModelGen114.java  ModelGen115.java  ModelGen116.java  ModelGen117.java  ModelGen118.java  ModelGen119.java  ModelGen120.java  ModelGen121.java  ModelGen122.java  ModelGen123.java  ModelGen124.java  ModelGen125.java  ModelGen126.java  ModelGen127.java  ModelGen128.java  ModelGen129.java  ModelGen130.java  ModelGen131.java  ModelGen132.java  ModelGen133.java  ModelGen134.java  ModelGen135.java  ModelGen136.java  ModelGen137.java  ModelGen138.java  (+11 more)
domain/src/main/java/domain/model-4/: BUILD.bazel  ModelGen150.java  ModelGen151.java  ModelGen152.java  ModelGen153.java  ModelGen154.java  ModelGen155.java  ModelGen156.java  ModelGen157.java  ModelGen158.java  ModelGen159.java  ModelGen160.java  ModelGen161.java  ModelGen162.java  ModelGen163.java  ModelGen164.java  ModelGen165.java  ModelGen166.java  ModelGen167.java  ModelGen168.java  ModelGen169.java  ModelGen170.java  ModelGen171.java  ModelGen172.java  ModelGen173.java  ModelGen174.java  ModelGen175.java  ModelGen176.java  ModelGen177.java  ModelGen178.java  ModelGen179.java  ModelGen180.java  ModelGen181.java  ModelGen182.java  ModelGen183.java  ModelGen184.java  ModelGen185.java  ModelGen186.java  ModelGen187.java  ModelGen188.java  (+11 more)
domain/src/main/java/domain/model-5/: BUILD.bazel  ModelGen200.java  ModelGen201.java  ModelGen202.java  ModelGen203.java  ModelGen204.java  ModelGen205.java  ModelGen206.java  ModelGen207.java  ModelGen208.java  ModelGen209.java  ModelGen210.java  ModelGen211.java  ModelGen212.java  ModelGen213.java  ModelGen214.java  ModelGen215.java  ModelGen216.java  ModelGen217.java  (+32 more)
fetcher/src/main/scala/fetcher/: Application.scala  BUILD.bazel  Fetcher.scala  WebServer.scala
(+214 files in other folders)
